--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/filesystem": "5.0.x@dev",
+    "illuminate/filesystem": "5.0.*",
     "illuminate/support": "5.0.*"
   },
   "autoload": {
