--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/filesystem": "5.0.*",
-    "illuminate/support": "5.0.*",
+    "illuminate/filesystem": "5.1.*@dev",
+    "illuminate/support": "5.1.*@dev",
     "erusev/parsedown-extra": "0.7.*"
   },
   "autoload": {
